@@ -1,5 +1,8 @@
 2004-10-31  Jost Boekemeier  <jostb@intern>
 
+	* bind.c (java_start_server): Protect guard; a dead guard isn't
+	really useful.
+	
 	* server/natcJavaBridge.c 
 	(Java_JavaBridge_startNative): Removed debug code.
 	(Java_JavaBridge_handleRequests): Cleanup.
